objects/SS_Assets_for_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Aus_Calc_Asset_Capacity_MW__c</fullName>
        <formula>Support_Services_Asset__r.Capacity_MW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equal to the capacity of the Support Services Asset</inlineHelpText>
        <label>Calculate Asset Capacity (MW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_Asset_Capacity__c</fullName>
        <label>Display Asset Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SS Assets for Opportunities</relationshipLabel>
        <relationshipName>SS_Assets_for_Opportunity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Support_Services_Asset__c</fullName>
        <label>Support Services Asset</label>
        <referenceTo>Support_Services_Asset__c</referenceTo>
        <relationshipLabel>SS Assets for Opportunities</relationshipLabel>
        <relationshipName>SS_Assets_for_Opp_Asset</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>SS Assets for Opportunity</label>
    <nameField>
        <label>Asset Name - Opp Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SS Assets for Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>